Fix mobile layout issue

--- a/_sass/layouts/pages/_misc.scss
+++ b/_sass/layouts/pages/_misc.scss
@@ -83,7 +83,7 @@ body.contact {
             a {
                 @media (max-width: 567px) {
                     display: block;
-                    font-size: 1.2rem;   
+                    font-size: 1rem;
                     margin-top: .5rem;
                 }
             }
